cmake_minimum_required(VERSION 2.8)
project(ksmcore CXX)
set(CMAKE_CXX_STANDARD 17)
if(MSVC)
    set(CMAKE_CXX_FLAGS "/EHsc")
else(MSVC)
    set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra -Wpedantic -Wno-unused-parameter")
endif(MSVC)
include_directories(third_party/ksh2kson/third_party/json/include)
include_directories(third_party/ksh2kson/include)
include_directories(include)
file(GLOB_RECURSE sources
    ${PROJECT_SOURCE_DIR}/third_party/ksh2kson/src/*.cpp
    ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_library(ksmcore SHARED ${sources})
